@@ -1051,7 +1051,7 @@
 						<Tool
 							Name="VCCustomBuildTool"
 							Description="Generating Swig/LUA Wrapper..."
-							CommandLine="swig -lua -c++ -I$(TUBRAS_SDK)\include -I$(TUBRAS_SDK)\deps\irrlicht\include -o $(InputDir)\tubras_wrap_lua.cpp $(InputPath)"
+							CommandLine="swig -lua -c++ -I$(TUBRAS_SDK)\include -I$(TUBRAS_SDK)\deps\irrlicht\include -o $(InputDir)\tubras_wrap_lua.cpp $(InputPath)&#x0D;&#x0A;"
 							Outputs="$(InputDir)\tubras_wrap_lua.cpp"
 						/>
 					</FileConfiguration>
