@@ -14,7 +14,7 @@ video =
     driver = EDT_OPENGL,
     -- driver = EDT_DIRECT3D9,
     resolution = {1024, 728},
-    resolution = {640,480},
+    --resolution = {640,480},
     colordepth = 32,
     fullscreen = false,
     vsync = true,
